# homepage

./: .gitignore  .gitmodules  Dockerfile  Jenkinsfile  Makefile  README.md  _quarto.yml  config.toml  justfile  main.py  pyproject.toml  pyproject.toml_d  up.sh
.github/: dependabot.yml
.github/workflows/: deploy.yml  pr.yml  security-check.yml
assets/css/: _custom.scss
content/about/: index.en.md
content/academia/: index.en.md
content/posts/argocd/: index.en.md
content/posts/backprop/: index.en.md
content/posts/dev-setup/: dev-setup.md  index.en.md  index.en.qmd
content/posts/hello-world/: index.en.md
content/posts/homepage-setup/: index.en.md
content/posts/k8s-basics/: index.en.md
content/posts/k8s-cluster/: index.en.md
content/posts/k8s-deplyoments/: index.en.md
content/posts/polars-confusion/: index.ipynb  index.md  index.qmd
content/posts/polars-kde/: index.md  index.qmd
content/posts/quarto-intro/: index.md  index.qmd
data/: projects.yaml  skills.yaml
layouts/: index.html
layouts/_default/: summary.html
layouts/about/: single.html
layouts/partials/: header.html  init.html
layouts/partials/home/: bio.html  projects.html  skills.html
marimo/: feature_drift.py
scripts/: gen_featured_images.py  gen_featured_images_ai.py  gen_preview_images.py  gen_ssh_key.sh  install.sh  install_marimo_notebooks.sh
