[tool.poetry]
name = "homepage"
version = "0.1.0"
description = ""
authors = ["André Schemaitat <a.schemaitat@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
polars = "^0.20.26"
numpy = "^1.26.4"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
