[project]
name = "homepage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.10.1",
    "notebook>=7.3.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pandera>=0.23.1",
    "plotly>=6.0.0",
    "plotly-express>=0.4.1",
    "polars>=1.24.0",
    "polars-kde==0.1.4",
    "pyarrow>=19.0.1",
    "seaborn>=0.13.2",
]
