[project]
name = "homepage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "jupyter-cache>=1.0.1",
    "marimo>=0.23.10",
    "matplotlib>=3.10.9",
    "notebook>=7.5.7",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pandera>=0.31.1",
    "plotly>=6.8.0",
    "plotly-express>=0.4.1",
    "polars>=1.41.2",
    "polars-kde==0.1.4",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
]
